--- a/welcome.html
+++ b/welcome.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Life Line</title>
-    <link rel="stylesheet" type="text/css" href="welcome.css">
+    <link rel="stylesheet" href="welcome.css">
 </head>
 <body>
     <div class = "main">
         <div class = "wrapper">
             <nav class = "navbar">
                 <h1>Local Life line</h1>
-                    <ul>
-                        <li><a href = ""></a>Profile</li>
-                        <li><a href = ""></a>Settings</li>
-                    </ul>
+                <ul>
+                    <li><a href = ""></a>Profile</li>
+                    <li><a href = ""></a>Settings</li>
+                </ul>
             </nav>
             <div class="content">
                 <h1>Welcome to the Local Life line! You are now part of the community.</h1>
