--- a/landpage.html
+++ b/landpage.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <div class="header">
-        <img src="/Project_Assets/pexels-pixabay-259447.jpg" alt="table_mountain" height="20%", width="100%">
+        <img src="Images/pexels-alexander-suhorucov-6457563.jpg" alt="table_mountain" height="20%", width="100%">
     </div>
     <div class="logo">
-        <img src="/Project_Assets/tmp_Loogoo.png" alt="LLLLogo" id="logo" height="100%", width="100%">
+        <img src="Images/tmp_Loogoo.png" alt="LLLLogo" id="logo" height="100%", width="100%">
     </div>
     <input type="checkbox" id="menuToggle">
     <label for="menuToggle">&#9776;</label>
     <ul id="menu">
-        <li><a href="/Project_Assets/landpage.html">Home</a></li>
-        <li><a href="#">Login/Register</a></li>
+        <li><a href="landpage.html">Home</a></li>
+        <li><a href="Login.html">Login/Register</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">Rate Us</a></li>
     </ul>
