--- a/registration.html
+++ b/registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesReg.css">
 </head>
 <body>
     <div class="container">
@@ -63,6 +63,9 @@
             </div>
             <div class="button">
               <input type="submit" value="Register">
+            </div>
+            <div class="log">
+              <h4>Already have and account? <a href="Login.html">Sign in!</a></h4>
             </div>
           </form>
         </div>
