--- a/welcome.html
+++ b/welcome.html
@@ -10,15 +10,15 @@
     <div class = "main">
         <div class = "wrapper">
             <nav class = "navbar">
-                <h1>Local Life line</h1>
+                <img src="tmp_Loogoo.png" class="logo">
                 <ul>
-                    <li><a href = ""></a>Profile</li>
-                    <li><a href = ""></a>Settings</li>
+                    <li><a href = "#">Profile</a></li>
+                    <li><a href = "#">Settings</a></li>
                 </ul>
             </nav>
             <div class="content">
-                <h1>Welcome to the Local Life line! You are now part of the community.</h1>
-                <p>Start making a difference</p>
+                <h1>Welcome to Local Life line!</h1>
+                <p>You are now part of the community start making a difference.</p>
                 <div class="button">
                     <input type="submit" value="Next">
                 </div>
