--- a/dashboard.html
+++ b/dashboard.html
@@ -7,13 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
 </head>
-<body>
+<header>
+    
+</header>
 
+<body>
+    <div style="width: auto; height: auto; height: 15vw; width: 15vw;">
+        <img class="logo" src="Images/tmp_Loogoo.png" alt="">
+    </div>
 
     <div style="height: 40vw; width: auto;  text-align: center; margin-bottom: 10vw;">
         <div class="container">
             <img src="Images/pexels-alexander-suhorucov-6457563.jpg" alt="Hands" style="width: 100%; height: 40vw; object-fit: cover;">
-
             <div class="center">
                 <h1 style="font-size: 3vw;">Welcome To LocalLife "username"!<br>
                     Be Part of the Community
@@ -61,9 +66,9 @@
 
     <div style=" float: right; margin-right: 10vw; margin-top: 3vw;">
         <div class="card">
-            <a class="active" href="https://github.com/Zaheer-Emeran/Project_Assets/tree/Work"><img src="Images/news_Icon.png" alt="Avatar" style="width:100%">
+            <a class="active" href="https://github.com/Zaheer-Emeran/Project_Assets/tree/Work"><img src="Images/chat_Icon.png" alt="Avatar" style="width:100%">
             <div class="container"></a> 
-              <h2><b>News</b></h2> 
+              <h2><b>Community Chat</b></h2> 
               <p>This is text which I'll replace in a wee bit. <br>
                 rn this is just here atm to add more space and to see the difference</p>
             </div>
@@ -72,9 +77,9 @@
 
     <div style=" float: right; margin-right: 7vw;margin-top: 3vw;">
         <div class="card">
-            <a class="active" href="https://github.com/Zaheer-Emeran/Project_Assets/tree/Work"><img src="Images/chat_Icon.png" alt="Avatar" style="width:100%">
+            <a class="active" href="https://github.com/Zaheer-Emeran/Project_Assets/tree/Work"><img src="Images/location_Icon.png" alt="Avatar" style="width:100%">
             <div class="container"></a> 
-              <h2><b>News</b></h2> 
+              <h2><b>Area</b></h2> 
               <p>This is text which I'll replace in a wee bit. <br>
                 rn this is just here atm to add more space and to see the difference</p>
             </div>
@@ -86,7 +91,7 @@
         <div class="card">
             <a class="active" href="https://github.com/Zaheer-Emeran/Project_Assets/tree/Work"><img src="Images/report_Stock_Image.jpg" alt="Avatar" style="width:100%">
             <div class="container"></a>
-              <h2><b>Alerts</b></h2> 
+              <h2><b>Report</b></h2> 
               <p>This is text which I'll replace in a wee bit. <br>
                 rn this is just here atm to add more space and to see the difference</p> 
             </div>
@@ -97,13 +102,21 @@
 
 </body>
 <footer>
-    <div style="height: 16vw; width: 30vw;">
-    <h1></h1>
-</div>
-
-    <div style=" width: auto; font-size: 1vw;">
-        <h1>&copy;Copyright 2024 WebsiteHoster.com</h1>
-
+  
+    <div style="height: 15vw; width: 15vw; float: right;">
+        <img class="logo" src="Images/tmp_Loogoo.png" alt="Logo">
     </div>
+    
+    <div style="height: auto; width: 20vw; padding-top: 3vw;">
+        <h1>privacy policy</h1>
+        <h1>contact Information</h1>
+        <h1>Social Media Icons</h1>
+        <h1>Email Signup</h1>
+    </div>
+    <div></div>
+    <div style="width: 20vw;margin-left: 40%; text-align: center; padding-top: 3vw; ">
+        <h1>&copy;Copyright 2024 WebsiteHoster.com</h1>
+    </div>
+
 </footer>
 </html>
