--- a/Login.html
+++ b/Login.html
@@ -5,30 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="stylesLog.css">
+    <script type="module" src="login.js"></script>
 </head>
 <body>
     <div class="container">
         <form action="#">
           <div class="title">Login</div>
           <div class="input-box underline">
-            <input type="text" placeholder="Enter Your Username" required>
+            <input type="email" placeholder="Enter Your Email" id="email" required>
             <div class="underline"></div>
           </div>
           <div class="input-box">
-            <input type="password" placeholder="Enter Your Password" required>
+            <input type="password" placeholder="Enter Your Password" id="password" required>
             <div class="underline"></div>
           </div>
           <div class="input-box button">
-            <input type="submit" name="" value="Continue">
+            <input type="submit" name="" value="Continue" id="login">
           </div>
         </form>
-          <div class="option">or Connect With Social Media</div>
-          <div class="twitter">
-            <a href="#"><i class="fab fa-twitter"></i>Sign in With Google</a>
-          </div>
-          <div class="facebook">
-            <a href="#"><i class="fab fa-facebook-f"></i>Sign in With Facebook</a>
-          </div>
           <div class="register">
             <h4>Don't have an account?<a href="registration.html"> Sign up!</a></h4>
           </div>
