--- a/report.html
+++ b/report.html
@@ -29,11 +29,11 @@
 <h1>Local Police Station Feedback</h1>
 
 <p>The Salt River community rates their sense of safety in their community <span style="font-size:35px; color:#C60076; font-weight: bolder;">4/10</span></p>
-<img src="half donut.png" style="width:200px; float:left"><p style="padding-top: 30px;"><span style="font-size:35px; color:#C60076; font-weight: bolder;">65%</span> of respondents say they trust the police.</p>
+<img src="Images/half donut.png" style="width:200px; float:left"><p style="padding-top: 30px;"><span style="font-size:35px; color:#C60076; font-weight: bolder;">65%</span> of respondents say they trust the police.</p>
 <p>Police urgency is rated <span style="font-size:35px; color:#C60076; font-weight: bolder;">6/10</span> by the community.</p>
 <p>Based on public opinion, these are the most prevelant crimes in Salt River</p>
 <div style="text-align: center;">
-<img style="height:80vh" src="type of crime.png">
+<img style="height:80vh" src="Images/type of crime.png">
 </div>
 <p>Police visibility is rated <span style="font-size:35px; color:#C60076; font-weight: bolder;">7/10</span> for your area.</p>
 </div>
