--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,7 @@
     <div class = "main">
         <div class = "wrapper">
             <nav class = "navbar">
-                <img src="tmp_Loogoo.png" class="logo">
+                <img src="/Images/tmp_Loogoo.png" class="logo">
                 <ul>
                     <li><a href = "#">Profile</a></li>
                     <li><a href = "#">Settings</a></li>
