--- a/dashboard.html
+++ b/dashboard.html
@@ -12,18 +12,20 @@
 </header>
 
 <body>
-    <div style="width: auto; height: auto; height: 15vw; width: 15vw;">
-        <img class="logo" src="Images/tmp_Loogoo.png" alt="">
-    </div>
-
-    <div style="height: 40vw; width: auto;  text-align: center; margin-bottom: 2vw;">
-        <div class="container">
-            <img src="Images/pexels-alexander-suhorucov-6457563.jpg" alt="Hands" style="width: 100%; height: 40vw; object-fit: cover;">
-            <div class="center">
-                <h1 style="font-size: 3vw;">Welcome To LocalLife "username"!<br>
-                    Be Part of the Community
-                </h1></div>
-            </div>    
+    <div class = "main">
+        <div class = "wrapper">
+            <nav class = "navbar">
+                <img src="/Images/tmp_Loogoo.png" class="logo">
+                <ul>
+                    <li><a href = "#">Profile</a></li>
+                    <li><a href = "#">Settings</a></li>
+                </ul>
+            </nav>
+            <div class="content">
+                <h1>Welcome to Local Life line!</h1>
+                <p>You are now part of the community start making a difference.</p>
+            </div>
+        </div>
     </div>
 
 
