--- a/dashboard.html
+++ b/dashboard.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="menu-items">
                         <li><a href="landpage.html">Home</a></li>
-                        <li><a href="login.html">Login/Register</a></li>
+                        <li><a href="login.html">Logout</a></li>
                         <li><a href="#">Settings</a></li>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
     
         <div style="margin-left: 10vw;margin-top: 3vw;">
             <div class="card">
-                <a class="active" href="https://github.com/Zaheer-Emeran/Project_Assets/tree/Work"><video src="Images/Video_Assets/icon_report_Done_Dirty0001-0326.mp4" autoplay muted loop alt="Avatar" style="width:100%">
+                <a class="active" href="report.html"><video src="Images/Video_Assets/icon_report_Done_Dirty0001-0326.mp4" autoplay muted loop alt="Avatar" style="width:100%">
     
                 <div class="container"></a>
                   <h2><b>Report</b></h2> 
@@ -126,6 +126,7 @@
 <footer>
     <div class="footerContainer">
         <div class="tabs">
+            <img src="Images/cpt_loogoo0200-0290.mp6.png" alt="City of Cape Town Logo" style="height: 15vw; width: 15vw; margin-left: 50%; float: inline-end;">
             <p><a href="#">Privacy Policy</a></p>
             <p><a href="#">Contact Information</a></p>
             <p><a href="#">Social Media</a></p>
@@ -133,9 +134,6 @@
         <div class="copyright">
             <h3> &#169 Copyright - RedSonic</h3>
         </div>
-        <!-- <div class="cityLogo">
-            <img src="/Project_Assets/capetown-city-logo.jpg" alt="City of Cape Town Logo" style="height: 100%; width: 100%;">
-        </div> -->
     </div>
 </footer>
 </html>
