--- a/report.html
+++ b/report.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link href="https://fonts.cdnfonts.com/css/helvetica-255" rel="stylesheet">
+    <link rel="stylesheet" href="nav.css">
 
     <style>
         p { font-size: 25px;}
@@ -38,6 +39,20 @@
 <header>
 
 </header>
+<nav class = "navbar">
+    <div class="container nav-container">
+        <input class="checkbox" type="checkbox" name="" id="" />
+        <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
+        </div>
+        <div class="menu-items">
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="#">Settings</a></li>
+        </div>
+    </div>
+</nav>
 <div style="background-color:#FF9900; padding: 20px;">
 <div style="background-color: white;  padding: 20px; margin:20px;">
 <h1>Local Police Station Feedback</h1>
