--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,7 @@
                         <span class="line line3"></span>
                     </div>
                     <div class="menu-items">
-                        <li><a href="landpage.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="login.html">Logout</a></li>
                         <li><a href="#">Settings</a></li>
                     </div>
