--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ a {
 <body>
     <div class="header" style="position: relative; text-align: center; color: white;">
         <div class="headerImage">
-            <img id="headerLogo" src="/Project_Assets/Images/pexels-pixabay-259447.jpg" alt="A view of Table Mountain" style="width:100%;">
+            <img id="headerLogo" src="Images/pexels-pixabay-259447.jpg" alt="A view of Table Mountain" style="width:100%;">
         </div>
         <h1 class="heading">LocalLifeLine</h1>
     </div>
@@ -263,7 +263,7 @@ a {
                 <span class="line line3"></span>
             </div>
             <div class="menu-items">
-                <li><a href="landpage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="login.html">Login/Register</a></li>
                 <li><a href="#">Settings</a></li>
             </div>
